--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.20.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
