--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "export": "next export"
-  },
+    "test:watch": "jest --watch"
+    },
   "dependencies": {
     "next": "^14.0.0",
     "react": "^18.0.0",
