--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.1.0",
     "cors": "^2.8.5",
+    "docx": "^9.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
