--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "RFP Proposal Generation System Backend",
   "main": "server.js",
   "scripts": {
-    "start": "node server-simple.js",
-    "dev": "nodemon server-simple.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest"
   },
   "dependencies": {
