--- a/amplify.yml
+++ b/amplify.yml
@@ -4,16 +4,18 @@ frontend:
     preBuild:
       commands:
         - echo "Installing dependencies..."
+        - cd frontend
         - npm ci
     build:
       commands:
         - echo "Building the app..."
+        - cd frontend
         - npm run build
   artifacts:
-    baseDirectory: .next
+    baseDirectory: frontend/.next
     files:
       - '**/*'
   cache:
     paths:
-      - node_modules/**/*
-      - .next/cache/**/*
+      - frontend/node_modules/**/*
+      - frontend/.next/cache/**/*
