--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,14 +94,29 @@ jobs:
 
     - name: Create ECR repository
       run: |
-        aws ecr describe-repositories --repository-names ${{ env.ECR_REPOSITORY }} || \
-        aws ecr create-repository --repository-name ${{ env.ECR_REPOSITORY }}
+        echo "Checking if ECR repository exists..."
+        if aws ecr describe-repositories --repository-names ${{ env.ECR_REPOSITORY }} --region ${{ env.AWS_REGION }} 2>/dev/null; then
+          echo "ECR repository ${{ env.ECR_REPOSITORY }} already exists"
+        else
+          echo "Creating ECR repository ${{ env.ECR_REPOSITORY }}..."
+          aws ecr create-repository --repository-name ${{ env.ECR_REPOSITORY }} --region ${{ env.AWS_REGION }}
+          echo "ECR repository created successfully"
+        fi
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+      with:
+        region: ${{ env.AWS_REGION }}
+
+    - name: Verify ECR login
+      run: |
+        echo "Verifying ECR login..."
+        aws ecr describe-repositories --region ${{ env.AWS_REGION }}
+        echo "ECR login successful"
 
     - name: Build and push Docker image
       run: |
-        # Get ECR login token
-        aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.AWS_REGION }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
-        
         # Build Docker image
         docker build -t ${{ env.ECR_REPOSITORY }}:${{ github.sha }} ./backend
         
