--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,15 +21,15 @@
     "@heroicons/react": "^2.0.18",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
-  },
-  "devDependencies": {
+    "postcss": "^8.4.31",
+    "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
+  },
+  "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "typescript": "^5.0.0",
     "jest": "^29.7.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/jest-dom": "^6.1.0"
