--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,6 +108,7 @@ jobs:
         fi
         
         # Deploy the stack
+        echo "Deploying backend stack..."
         aws cloudformation deploy \
           --template-file .github/cloudformation/backend-apprunner.yml \
           --stack-name ${{ env.BACKEND_STACK_NAME }} \
@@ -116,7 +117,15 @@ jobs:
             RepositoryUrl=https://github.com/${{ github.repository }} \
             BranchName=${{ github.ref_name }} \
             Environment=production \
-          --region ${{ env.AWS_REGION }}
+          --region ${{ env.AWS_REGION }} || {
+            echo "Stack deployment failed. Getting stack events..."
+            aws cloudformation describe-stack-events \
+              --stack-name ${{ env.BACKEND_STACK_NAME }} \
+              --region ${{ env.AWS_REGION }} \
+              --query 'StackEvents[?ResourceStatus==`CREATE_FAILED` || ResourceStatus==`UPDATE_FAILED`].{Resource:LogicalResourceId,Status:ResourceStatus,Reason:ResourceStatusReason}' \
+              --output table
+            exit 1
+          }
 
     - name: Get Backend URL
       id: get-backend-url
