--- a/.github/cloudformation/backend-apprunner.yml
+++ b/.github/cloudformation/backend-apprunner.yml
@@ -17,6 +17,11 @@ Parameters:
     Description: Environment name
     Default: 'production'
     AllowedValues: ['development', 'staging', 'production']
+  
+  GitHubToken:
+    Type: String
+    Description: GitHub token for repository access
+    NoEcho: true
 
 Resources:
 
@@ -35,6 +40,19 @@ Resources:
         - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
         - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
 
+  # IAM Role for App Runner Service
+  AppRunnerServiceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: build.apprunner.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
 
   # CloudWatch Log Group for App Runner
   AppRunnerLogGroup:
@@ -66,6 +84,7 @@ Resources:
                 - Name: PORT
                   Value: '8000'
         AutoDeploymentsEnabled: true
+        ServiceRoleArn: !GetAtt AppRunnerServiceRole.Arn
       InstanceConfiguration:
         Cpu: '1024'
         Memory: '2048'
