--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,7 +117,7 @@ jobs:
             RepositoryUrl=https://github.com/${{ github.repository }} \
             BranchName=${{ github.ref_name }} \
             Environment=production \
-            CodeStarConnectionArn=arn:aws:codeconnections:us-east-1:211125621822:connection/3001d156-50df-4d38-93c2-ad120eac04fc \
+            CodeStarConnectionArn=arn:aws:apprunner:us-east-1:211125621822:connection/polaris-rfp/577729d32ae34e1380983e866e425016 \
           --region ${{ env.AWS_REGION }} || {
             echo "Stack deployment failed. Getting stack events..."
             aws cloudformation describe-stack-events \
