--- a/.github/cloudformation/backend-apprunner.yml
+++ b/.github/cloudformation/backend-apprunner.yml
@@ -67,13 +67,15 @@ Resources:
             ConfigurationSource: REPOSITORY
             CodeConfigurationValues:
               Runtime: NODEJS_18
-              BuildCommand: 'cd backend && npm ci'
-              StartCommand: 'cd backend && npm start'
+              BuildCommand: 'cd backend && npm ci --only=production'
+              StartCommand: 'cd backend && node server-simple.js'
               RuntimeEnvironmentVariables:
                 - Name: NODE_ENV
                   Value: !Ref Environment
                 - Name: PORT
                   Value: '8000'
+                - Name: FRONTEND_URL
+                  Value: 'https://main.d2ds3speyvmfi1.amplifyapp.com'
         AutoDeploymentsEnabled: true
       InstanceConfiguration:
         Cpu: '1024'
