--- a/.github/cloudformation/backend-apprunner.yml
+++ b/.github/cloudformation/backend-apprunner.yml
@@ -56,15 +56,22 @@ Resources:
     Properties:
       ServiceName: !Sub 'polaris-backend-${Environment}'
       SourceConfiguration:
-        AuthenticationConfiguration:
-          ConnectionArn: !Ref CodeStarConnectionArn
         CodeRepository:
           RepositoryUrl: !Ref RepositoryUrl
           SourceCodeVersion:
             Type: BRANCH
             Value: !Ref BranchName
           CodeConfiguration:
-            ConfigurationSource: REPOSITORY
+            ConfigurationSource: API
+            CodeConfigurationValues:
+              Runtime: NODEJS_18
+              BuildCommand: 'cd backend && npm install express'
+              StartCommand: 'cd backend && node test-server.js'
+              RuntimeEnvironmentVariables:
+                - Name: NODE_ENV
+                  Value: production
+                - Name: PORT
+                  Value: '8000'
         AutoDeploymentsEnabled: true
       InstanceConfiguration:
         Cpu: '1024'
