--- a/.github/cloudformation/backend-apprunner.yml
+++ b/.github/cloudformation/backend-apprunner.yml
@@ -56,6 +56,8 @@ Resources:
     Properties:
       ServiceName: !Sub 'polaris-backend-${Environment}'
       SourceConfiguration:
+        AuthenticationConfiguration:
+          ConnectionArn: !Ref CodeStarConnectionArn
         CodeRepository:
           RepositoryUrl: !Ref RepositoryUrl
           SourceCodeVersion:
