--- a/.github/cloudformation/backend-apprunner.yml
+++ b/.github/cloudformation/backend-apprunner.yml
@@ -64,8 +64,8 @@ Resources:
             ConfigurationSource: API
             CodeConfigurationValues:
               Runtime: NODEJS_18
-              BuildCommand: 'echo "Minimal build - no dependencies needed"'
-              StartCommand: 'node minimal-server.js'
+              BuildCommand: 'npm install'
+              StartCommand: 'node server.js'
               RuntimeEnvironmentVariables:
                 - Name: NODE_ENV
                   Value: production
