--- a/.github/cloudformation/backend-apprunner.yml
+++ b/.github/cloudformation/backend-apprunner.yml
@@ -64,13 +64,15 @@ Resources:
             ConfigurationSource: API
             CodeConfigurationValues:
               Runtime: NODEJS_18
-              BuildCommand: 'npm install'
-              StartCommand: 'node server.js'
+              BuildCommand: 'cd backend && npm install'
+              StartCommand: 'cd backend && node server.js'
               RuntimeEnvironmentVariables:
                 - Name: NODE_ENV
                   Value: production
                 - Name: PORT
                   Value: '8080'
+                - Name: FRONTEND_URL
+                  Value: 'https://main.d2ds3speyvmfi1.amplifyapp.com'
         AutoDeploymentsEnabled: true
       InstanceConfiguration:
         Cpu: '1024'
