--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "officegen": "^0.6.5",
     "openai": "^4.20.0",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.2"
