--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,5 +1,5 @@
 version: 1.0
-runtime: nodejs18
+runtime: nodejs20
 build:
   commands:
     build:
@@ -7,8 +7,8 @@ build:
       - cd backend
       - npm install
 run:
-  runtime-version: nodejs18
-  command: cd backend && node test-server.js
+  runtime-version: nodejs20
+  command: cd backend && npm start
   network:
     port: 8080
     env: PORT
