--- a/.github/cloudformation/frontend-amplify.yml
+++ b/.github/cloudformation/frontend-amplify.yml
@@ -26,7 +26,7 @@ Parameters:
   BackendUrl:
     Type: String
     Description: Backend API URL
-    Default: 'https://wm8h6yjgim.us-east-1.awsapprunner.com'
+    Default: 'https://cvsmuhhazj.us-east-1.awsapprunner.com'
 
 Resources:
   # IAM Role for Amplify
