--- a/environment.example
+++ b/environment.example
@@ -1,5 +1,5 @@
 # Frontend Environment Variables
-NEXT_PUBLIC_API_BASE_URL=https://wm8h6yjgim.us-east-1.awsapprunner.com
+NEXT_PUBLIC_API_BASE_URL=https://cvsmuhhazj.us-east-1.awsapprunner.com
 NODE_ENV=development
 
 # Backend Environment Variables
